--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
-  <body>
-    Hello world
+  <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
+<title>Welcome to the Thunderdome!</title>  </head>
+    <body>
+      <h1>Yo, homeslices!</h1>
+   Hello world
   </body>
   </html>
 
