--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="style.css">
-<title>Welcome to the Thunderdome!</title>  </head>
+<title>Welcome to the my corner!</title>  </head>
     <body>
-      <h1>Yo, homeslices!</h1>
-   Hello world
+      <h1>This is me talking to the internet and showing it pretty things</h1>
+
   </body>
   </html>
 
